# this_day_birthday

./: README.md  birthdays.json  pyproject.toml  requirements.txt
this_day/: app.py  auth.py  birthdays.py  cache.py  cards.py  cli.py  config.py  extrasources.py  fetchers.py  renderer.py  sms.py  tone.py  utils.py
